--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm ci
 
       - name: Build my App
-        run: npm run build && npm run export && touch ./dist/.nojekyll
+        run: npm run build && touch ./dist/.nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
